--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
     "react-scripts": "4.0.3",
+    "ts-enum-util": "^4.0.2",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
