--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
+    "react-responsive": "^8.2.0",
     "react-scripts": "4.0.3",
     "ts-enum-util": "^4.0.2",
     "typescript": "^4.3.2",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-responsive": "^8.0.2"
   }
 }
