--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-flip-move": "^3.0.4",
     "react-responsive": "^8.2.0",
     "react-scripts": "4.0.3",
+    "react-swipeable": "^6.1.2",
     "ts-enum-util": "^4.0.2",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
