--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
+    "react-hot-toast": "^2.0.0",
     "react-responsive": "^8.2.0",
     "react-scripts": "4.0.3",
     "react-swipeable": "^6.1.2",
