--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.14",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.6",
+    "bootstrap": "^5.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,6 +19,7 @@
     "react-responsive": "^8.2.0",
     "react-scripts": "4.0.3",
     "react-swipeable": "^6.1.2",
+    "sass": "^1.34.1",
     "ts-enum-util": "^4.0.2",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
