--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "react-dom": "^17.0.2",
     "react-flip-move": "^3.0.4",
     "react-hot-toast": "^2.0.0",
+    "react-redux": "^7.2.4",
     "react-responsive": "^8.2.0",
     "react-scripts": "4.0.3",
     "react-swipeable": "^6.1.2",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.34.1",
     "ts-enum-util": "^4.0.2",
     "typescript": "^4.3.2",
